@@ -1,5 +1,8 @@
 #This is a list of changes in pygame's history.
 
+Nov 30, 2000
+	UserRect module added
+
 Nov 29, 2000
 	joystick module rewrite finished [BREAK]
 	cdrom module rewrite finished [BREAK]
